# xmlparser-relaxed

./: Cargo.toml  README.md
afl-fuzz/src/: main.rs
fuzz/fuzz_targets/: fuzz_xml.rs
src/: lib.rs  stream.rs
tests/integration/: api.rs
