[package]
name = "xmlparser-relaxed"
version = "0.13.5"
authors = ["Evgeniy Reizner <razrfalcon@gmail.com>", "Merlyn Morgan-Graham <kavika@gmail.com>"]
categories = ["parser-implementations"]
description = "Pull-based, zero-allocation XML parser."
documentation = "https://docs.rs/xmlparser/"
keywords = ["xml", "parser", "tokenizer"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/kavika13/xmlparser-relaxed"
edition = "2018"

[features]
default = ["std"]
std = []
